# forestanza

./: .gitignore  CMakeLists.txt  DEV.nou  INFO.nou  README.md  collaboration.nou  compile  deprecated.nou  distribution.nou  format.nou  platform.nou  syntax.nou  tools.nou  workflow.nou
ext/: CMakeLists.txt
format/: db.nou  static-fmt-gen.nou
mod/: CMakeLists.txt
mod/common/: CMakeLists.txt
mod/common/api/common/: exec.h  factory.h
mod/common/src/: exec.cpp
mod/mtl/: CMakeLists.txt
mod/mtl/api/: mtl.h
mod/mtl/api/mtl/: api.h
mod/mtl/exe/: main.cpp
mod/mtl/inc/: web.h
mod/mtl/inc/web/: google.h
mod/mtl/src/: api.cpp  web.cpp
mod/mtl/src/web/: apertium.cpp  baidu.cpp  bing.cpp  google.cpp  yandex.cpp
mod/mtl/t/: web_test.cpp
mod/mtl/t/web/: google_test.cpp
scripts/: setup-env  setup-pj
tool/: _index.nou  fetch.nou  statistics.nou  translate.nou
ui/: all.nou  cli.nou  collaboration.nou  main.nou  qt.nou  web.nou
www/: collaboration.nou  faq.nou  mining.nou  resources.nou  site.nou
